# star-actually

./: .gitignore  README.md  build.sh
homepage/: index.html
public/: index.html
public/ho-actually/: catalog.json  help.html  index.html
public/ho-actually/n/agent-task/: d1.html  d2.html  d3.html  d4.html  d5.html  full.html  index.html
public/ho-actually/n/arc/: d1.html  d2.html  d3.html  d4.html  d5.html  full.html  index.html
public/ho-actually/n/basis-of-design/: d1.html  d2.html  d3.html  d4.html  full.html  index.html
public/ho-actually/n/build-record/: d1.html  d2.html  d3.html  d4.html  d5.html  full.html  index.html
public/ho-actually/n/builds-on/: d1.html  d2.html  d3.html  full.html  index.html
public/ho-actually/pagefind/: pagefind-entry.json  pagefind.en_483838742e.pf_meta  pagefind.en_70f52622b5.pf_meta  pagefind.en_8878817447.pf_meta  pagefind.en_8bc0a70c32.pf_meta  pagefind.en_9990fea2da.pf_meta  pagefind.en_a72d39c51e.pf_meta  pagefind.en_eec51e1a7f.pf_meta  pagefind.en_f9638cad3f.pf_meta
public/ssh-actually/: catalog.json  help.html  index.html
public/ssh-actually/pagefind/: pagefind-entry.json  pagefind.en_51dd77ff97.pf_meta  pagefind.en_c037dcf0bc.pf_meta
stars/ho-actually/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  site.yaml
stars/ho-actually/ho-process/: ho-00-orientation.md  kamae-4-content-track-overview.md
stars/ho-actually/ho-process/agent-tasks/: phase-a-node-authoring.md
stars/ho-actually/ho-process/hos/: ho-01-content-phase-a.md  ho-02-ingest.md
stars/ho-actually/nodes/: agent-task.md  arc.md  basis-of-design.md  build-record.md  builds-on.md  closure.md  compressed-chain.md  constitutive-child.md  cross-session-continuity.md  dandori.md  declared-compression.md  design-tuning.md  devlog.md  dogfood.md  forward-only.md  graded-eval.md  ha.md  ho-0-5.md  ho-00.md  ho-document.md  ho-overview.md  ho-process.md  ho.md  hot-cold.md  interaction-test.md  kagen.md  kamae-addendum.md  kamae.md  kokoroe.md  landing-ho.md  learning-walkthrough.md  mind-hand.md  mutability.md  notes.md  orientation-ho.md  parti.md  phase.md  precedential-thinking.md  project-lifecycle.md  propagation-ledger.md  (+27 more)
stars/ho-actually/scripts/: ingest.py
stars/ho-actually/tests/: test_content.py
stars/ssh-actually/: .pre-commit-config.yaml  CLAUDE.md  LICENSE-CONTENT  Makefile  README.md  pyproject.toml  site.yaml
stars/ssh-actually/ho-process/: kamae-1-star-actually-seed.md  kamae-2-star-actually-system-design.md  kamae-4-star-actually-ho-overview.md  node-map.md  provenance-report.md
stars/ssh-actually/ho-process/hos/: ho-00-orientation.md  ho-01-node-schema-and-parser.md  ho-02-the-graph.md  ho-03-the-render.md  ho-04-the-look.md  ho-05-the-motion.md  ho-06-the-index.md  ho-07-the-receptionist.md  ho-08-integration-and-smoke.md  ho-10-interaction-findings-1.md  ho-11-review-findings.md  ho-12-engine-extraction.md
stars/ssh-actually/ho-process/pre-seeds/: project-note-2026-04-18.md  star-actually-seed-v1.md  star-actually-seed-v2.md  star-actually-seed-v3.md
stars/ssh-actually/nodes/: agent-forwarding.md  authorized-keys.md  blob.md  choosing-an-approach.md  config-wildcards.md  deploy-public-key.md  fido2.md  file-permissions.md  first-key-setup.md  git-ssh-authentication.md  hardware-key-capabilities.md  hardware-key-setup-nonresident.md  hardware-key-setup-resident.md  hardware-keys-ssh.md  hardware-pin.md  hardware-security-keys.md  host-aliases.md  host-key-changed.md  identities-only.md  jump-host-config.md  key-generation.md  key-naming.md  key-pairs.md  key-rotation.md  known-hosts.md  lost-hardware-key.md  macos-keychain.md  managing-resident-credentials.md  mfa-strength-ladder.md  mfa.md  modern-auth-landscape.md  multiple-github-accounts.md  new-machine-setup.md  non-resident-keys.md  one-time-codes.md  passkeys.md  passphrases.md  passwords.md  permission-denied.md  phishing-resistance.md  (+20 more)
stars/ssh-actually/tests/: test_content.py
(+1507 files in other folders)
